proj1/tests/other-tests/oskis-angels_tests/correct/for-multiple-vars.py
for i, j, k in [(0, 1, 2), (3, 4, 5), (6, 7, 8)]:
    print i ** j + k * i + j - k

for (i, j, k) in [(0, 1, 2), (3, 4, 5), (6, 7, 8)]:
    print i ** j + k * i + j - k

for m, n in (0, 1), (2, 3), (4, 5), (6, 7):
    print m * n / 2
