proj1/tests/other-tests/oskis-angels_tests/error/extended_slices.py
l = [0, 2, 3, 4, 5]
a = l[0:4:1]
